--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -64,10 +64,13 @@ jobs:
         git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} shellcheck-fixes
 
     - name: Create Pull Request
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "Setting up GitHub CLI..."
         apt update && apt install -y gh
-        gh auth login --with-token <<< "$GITHUB_TOKEN"
+        echo "Authenticating GitHub CLI..."
+        echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
         echo "Creating pull request..."
         gh pr create --title "ShellCheck Fixes" --body "This pull request contains fixes for issues identified during the ShellCheck scan." --base main --head shellcheck-fixes
@@ -76,7 +79,8 @@ jobs:
       run: |
         echo "Setting up GitHub CLI..."
         apt update && apt install -y gh
-        gh auth login --with-token <<< "$GITHUB_TOKEN"
+        echo "Authenticating GitHub CLI..."
+        echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
         echo "Checking for existing issue..."
         ISSUE_TITLE="Weekly ShellCheck Findings"
