--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -50,7 +50,7 @@ jobs:
         git init
         git remote add origin $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
         git fetch origin
-        git checkout -b shellcheck-fixes
+        git checkout -b shellcheck-fixes || git checkout shellcheck-fixes
 
     - name: Commit and Push Fixes
       env:
@@ -61,7 +61,10 @@ jobs:
         git config --global user.email "actions@github.com"
         git add scan_results/
         git commit -m "Apply Security fixes"
-        git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} shellcheck-fixes
+        echo "Pulling latest changes from remote branch..."
+        git pull --rebase origin shellcheck-fixes || true
+        echo "Pushing changes to remote branch..."
+        git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} shellcheck-fixes --force
 
     - name: Create Pull Request
       env:
