--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,6 +33,8 @@ jobs:
           shellcheck "$script" > "scan_results/$sanitized_name.txt" || true
         done
         echo "ShellCheck completed. Results stored in scan_results/"
+        echo "Contents of scan_results directory:"
+        ls -la scan_results/ || echo "No files in scan_results/"
 
     - name: Install Git
       run: |
@@ -68,9 +70,13 @@ jobs:
         echo "Committing fixes..."
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
-        git add scan_results/
-        git commit -m "Apply Security fixes"
-        git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} shellcheck-fixes
+        if [ -d "scan_results" ] && [ "$(ls -A scan_results)" ]; then
+          git add scan_results/
+          git commit -m "Apply Security fixes"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} shellcheck-fixes
+        else
+          echo "No files to commit in scan_results/ directory."
+        fi
 
     - name: Install GitHub CLI
       run: |
