--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -18,37 +18,52 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # --- Detect Node needs & Next presence early ---
+      - name: Detect Node/Next presence
+        id: detect
+        run: |
+          needs_node=false
+          next_enabled=false
+
+          # If either package.json OR package-lock.json exists, we need Node.
+          if [ -f package.json ] || [ -f package-lock.json ]; then
+            needs_node=true
+          fi
+
+          # Detect Next components
+          if [ -d "pages" ] || [ -d "components" ] || [ -f "next.config.js" ]; then
+            next_enabled=true
+          fi
+
+          echo "NEEDS_NODE=$needs_node" >> "$GITHUB_ENV"
+          echo "NEXT_JS_ENABLED=$next_enabled" >> "$GITHUB_ENV"
+
+          echo "Detected: NEEDS_NODE=$needs_node, NEXT_JS_ENABLED=$next_enabled"
+
       - name: Setup Node.js
+        if: env.NEEDS_NODE == 'true'
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '20'   # Next 14.x requires >=18.17
           cache: 'npm'
           cache-dependency-path: |
-            package.json
             package-lock.json
-        continue-on-error: false
+            package.json
 
-      - name: Setup Next.js if components exist
+      - name: Ensure package.json exists if Next is enabled (bootstrap)
+        if: env.NEXT_JS_ENABLED == 'true' && !exists('package.json')
         run: |
-          # Check if we have Next.js components
-          if [ -d "pages" ] || [ -d "components" ] || [ -f "next.config.js" ]; then
-            echo "Next.js components detected, ensuring proper setup..."
-
-            # Create package.json if it doesn't exist
-            if [ ! -f package.json ]; then
-              echo "Creating package.json for Next.js build..."
-            cat <<EOF > package.json
+          echo "Bootstrapping minimal package.json..."
+          cat > package.json <<'EOF'
           {
             "name": "hardn-xdr-platform",
             "version": "1.0.0",
-            "description": "HARDN-XDR Security Platform",
             "private": true,
             "scripts": {
               "dev": "next dev",
@@ -57,43 +72,29 @@ jobs:
               "start": "next start"
             },
             "dependencies": {
-              "next": "^14.0.4",
-              "react": "^18.2.0",
-              "react-dom": "^18.2.0"
-            },
-            "devDependencies": {
-              "@types/node": "^20.10.0",
-              "@types/react": "^18.2.42",
-              "@types/react-dom": "^18.2.17",
-              "typescript": "^5.3.3"
+              "next": "^14.2.31",
+              "react": "^18.3.1",
+              "react-dom": "^18.3.1"
             }
           }
           EOF
-          fi
 
-            echo "NEXT_JS_ENABLED=true" >> $GITHUB_ENV
-          else
-            echo "No Next.js components found, skipping Next.js setup..."
-            echo "NEXT_JS_ENABLED=false" >> $GITHUB_ENV
-          fi
-
-      - name: Install Node.js dependencies
-        if: env.NEXT_JS_ENABLED == 'true'
+      - name: Install Node dependencies
+        if: env.NEEDS_NODE == 'true'
         run: |
-          echo "Installing Node.js dependencies..."
-
-          # Check if package-lock.json exists, use appropriate install method
-          if [ -f "package-lock.json" ]; then
-            echo "Lock file found, using npm ci for reproducible install..."
+          if [ -f package-lock.json ]; then
+            echo "Using npm ci (lockfile present)..."
             npm ci
-          else
-            echo "No lock file found, using npm install..."
+          elif [ -f package.json ]; then
+            echo "Using npm install (no lockfile)..."
             npm install --no-package-lock
+          else
+            echo "No package manifest; skipping npm install."
           fi
 
-          # Verify installation
-          echo "Verifying Next.js installation..."
-          npx next --version || echo "Next.js version check failed, but continuing..."
+      - name: Verify Next CLI (if Next enabled)
+        if: env.NEXT_JS_ENABLED == 'true'
+        run: npx --yes next --version
 
       - name: Generate traffic badges
         env:
@@ -101,19 +102,16 @@ jobs:
         run: |
           mkdir -p _site/badges
 
-          # Generate traffic badge JSONs using GitHub API
           VIEW_JSON=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/traffic/views || echo '{"count": 0, "uniques": 0}')
-
+            https://api.github.com/repos/${{ github.repository }}/traffic/views || echo '{"count":0,"uniques":0}')
           CLONE_JSON=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/traffic/clones || echo '{"count": 0, "uniques": 0}')
+            https://api.github.com/repos/${{ github.repository }}/traffic/clones || echo '{"count":0,"uniques":0}')
 
           VIEW_COUNT=$(echo "$VIEW_JSON" | jq -r '.count // 0')
           VIEW_UNIQUES=$(echo "$VIEW_JSON" | jq -r '.uniques // 0')
           CLONE_COUNT=$(echo "$CLONE_JSON" | jq -r '.count // 0')
           CLONE_UNIQUES=$(echo "$CLONE_JSON" | jq -r '.uniques // 0')
 
-          # Determine badge colors
           if [ "$VIEW_COUNT" -ge 200 ]; then VIEW_COLOR="green"
           elif [ "$VIEW_COUNT" -ge 50 ]; then VIEW_COLOR="orange"
           else VIEW_COLOR="red"
@@ -124,86 +122,46 @@ jobs:
           else CLONE_COLOR="red"
           fi
 
-          # Create badge JSON files
-          cat <<EOF > _site/badges/traffic-views.json
-          {
-            "schemaVersion": 1,
-            "label": "views",
-            "message": "$VIEW_COUNT / $VIEW_UNIQUES",
-            "color": "$VIEW_COLOR"
-          }
+          cat > _site/badges/traffic-views.json <<EOF
+          { "schemaVersion":1,"label":"views","message":"$VIEW_COUNT / $VIEW_UNIQUES","color":"$VIEW_COLOR" }
+          EOF
+          cat > _site/badges/traffic-clones.json <<EOF
+          { "schemaVersion":1,"label":"clones","message":"$CLONE_COUNT / $CLONE_UNIQUES","color":"$CLONE_COLOR" }
           EOF
 
-          cat <<EOF > _site/badges/traffic-clones.json
-          {
-            "schemaVersion": 1,
-            "label": "clones", 
-            "message": "$CLONE_COUNT / $CLONE_UNIQUES",
-            "color": "$CLONE_COLOR"
-          }
-          EOF
-
-      - name: Build Next.js components
+      - name: Build Next.js (static export)
+        id: nextexport
         if: env.NEXT_JS_ENABLED == 'true'
         run: |
-          echo "Building Next.js components..."
-
-          # Build Next.js with error handling
-          if npm run export; then
-            echo " Next.js build successful"
-
-            # Copy Next.js build output
-            if [ -d "out" ]; then
-              echo "Copying Next.js static export to _site directory..."
-              mkdir -p _site
-              cp -r out/* _site/ || true
-
-              # Create .nojekyll to prevent GitHub Pages Jekyll processing
-              touch _site/.nojekyll
-
-              echo "Next.js static files copied successfully"
-              ls -la _site/
-            else
-              echo "  Next.js out directory not found"
-            fi
-          else
-            echo " Next.js build failed, continuing with Jekyll only..."
-            echo "NEXT_JS_BUILD_FAILED=true" >> $GITHUB_ENV
-          fi
+          set -e
+          npm run export
+          mkdir -p _site
+          cp -r out/* _site/ || true
+          touch _site/.nojekyll
+          echo "exported=true" >> "$GITHUB_OUTPUT"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
+      # Only build Jekyll if we did NOT just export Next successfully
       - name: Build with Jekyll
-        if: env.NEXT_JS_ENABLED == 'false' || env.NEXT_JS_BUILD_FAILED == 'true'
+        if: steps.nextexport.outputs.exported != 'true'
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
 
-      - name: Skip Jekyll (using Next.js static export)
-        if: env.NEXT_JS_ENABLED == 'true' && env.NEXT_JS_BUILD_FAILED != 'true'
-        run: |
-          echo "Using Next.js static export instead of Jekyll build"
-          echo "Site is already built in _site directory from Next.js export"
-
       - name: Post-process site
         run: |
-          # Ensure badges directory exists in final site
           mkdir -p _site/badges
-
-          # Copy any additional assets
           if [ -d "assets/next" ]; then
             cp -r assets/next/* _site/ || true
           fi
-
-          echo "Site build completed"
-          ls -la _site/
+          echo "Final _site contents:" && ls -la _site/ || true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
